Se termino de realiazar el CRUD
