# src/main/java/io/swagger/api/MensajesApi.java
@@ -36,5 +36,46 @@ public interface MensajesApi {
         produces = { "application/json" }, 
         method = RequestMethod.GET)
     ResponseEntity<List<MensajesResponse>> leerMensajes();
+    
+    @ApiOperation(value = "Edita los mensajes de saludo", nickname = "editMessageById", notes = "Edita mensajes", authorizations = {
+            @Authorization(value = "api_key")
+        }, tags={ "mensajes", })
+        @ApiResponses(value = { 
+            @ApiResponse(code = 201, message = "Operacion exitosa"),
+            @ApiResponse(code = 400, message = "Error al realizar la operacion"),
+            @ApiResponse(code = 404, message = "No encontrado") })
+        @RequestMapping(value = "/mensajes/{id_saludo}",
+            produces = { "application/json" }, 
+            method = RequestMethod.PUT)
+        ResponseEntity<MensajesResponse> editMessageById(@ApiParam(value = " ",required=true) @PathVariable("id_saludo") Long idSaludo,@ApiParam(value = "Nuevo saludo" ,required=true )  @Valid @RequestBody String saludo);
 
+
+    @ApiOperation(value = "Edita los mensajes de saludo", nickname = "editMessageById", notes = "Edita mensajes", authorizations = {
+        @Authorization(value = "api_key")
+    }, tags={ "mensajes", })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 201, message = "Operacion exitosa"),
+        @ApiResponse(code = 400, message = "Error al realizar la operacion"),
+        @ApiResponse(code = 404, message = "No encontrado") })
+    @RequestMapping(value = "/mensajes/{id_saludo}",
+        produces = { "application/json" }, 
+        method = RequestMethod.PUT)
+    ResponseEntity<Void> editMessageById(@ApiParam(value = " ",required=true) @PathVariable("id_saludo") Long idSaludo);
+
+
+    @ApiOperation(value = "Busca un mensaje por su id", nickname = "getMessageById", notes = "Regresa un mensaje", authorizations = {
+        @Authorization(value = "api_key")
+    }, tags={ "mensajes", })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "Operacion exitosa"),
+        @ApiResponse(code = 400, message = "Error al realizar la operacion"),
+        @ApiResponse(code = 404, message = "Mensaje no encontrado") })
+    @RequestMapping(value = "/mensajes/{id_saludo}",
+        produces = { "application/json" }, 
+        method = RequestMethod.GET)
+    ResponseEntity<MensajesResponse> getMessageById(@ApiParam(value = "Id del mensaje a regresar",required=true) @PathVariable("id_saludo") Long idSaludo);
+
+
+
+    
 }
