# src/main/java/io/swagger/api/MensajesApiController.java
@@ -31,5 +31,20 @@ public class MensajesApiController implements MensajesApi {
         final List<MensajesResponse> leerMensajesBigQuery = this.saludoService.leerMensajesPostgres();
         return new ResponseEntity<>(leerMensajesBigQuery, HttpStatus.OK);
     }
+    
+    public ResponseEntity<MensajesResponse> deleteMessageById(@ApiParam(value = " ",required=true) @PathVariable("id_saludo") Long idSaludo) {
+    	final MensajesResponse mensajeObtenido = this.saludoService.obtenerMensaje(idSaludo);
+        return new ResponseEntity<MensajesResponse>(mensajeObtenido, HttpStatus.OK);
+    }
 
+    public ResponseEntity<MensajesResponse> editMessageById(@ApiParam(value = " ",required=true) @PathVariable("id_saludo") Long idSaludo,@ApiParam(value = "Nuevo saludo" ,required=true )  @Valid @RequestBody String saludo) {
+    	final MensajesResponse modificacionMensaje = this.saludoService.actualizarMensaje(idSaludo, saludo);
+        return new ResponseEntity<MensajesResponse>(modificacionMensaje,HttpStatus.NOT_IMPLEMENTED);
+    }
+
+    public ResponseEntity<MensajesResponse> getMessageById(@ApiParam(value = "Id del mensaje a regresar",required=true) @PathVariable("id_saludo") Long idSaludo) {
+        final MensajesResponse mensajeObtenido = this.saludoService.obtenerMensaje(idSaludo);
+        return new ResponseEntity<MensajesResponse>(mensajeObtenido, HttpStatus.OK);
+    }
+    
 }
